# phosh-antispam

./: .build.yml  .clangTest.yml  .cppcheckTest.yml  .gitlab-ci.yml  AUTHORS  CONTRIBUTING.md  NEWS.org  README.md  index.html  meson.build  output_cb22b69a4771f72e0f22cf174c650aec87152ae7  phosh-antispam.doap  run.in
2022-03-13-234038-13422-1@40ffccf209ca_master/: index.html  output_40ffccf209ca01de7b01dab443c41f32fd1d58d8  report-d4fb25.html
2022-03-13-234048-6602-cppcheck@40ffccf209ca_master/: commitmsg  stats.html
2022-03-14-074856-9882-cppcheck@6829f05b3466_Dead_assignment/: 2.html  commitmsg  output_6829f05b3466c03613dd1d62b414eaadb1aa762b
2022-03-14-085301-13427-1@5c38ca212867_Wmissing-field-initializers/: commitmsg  index.html  report-d5466a.html
2022-03-14-085308-4608-cppcheck@5c38ca212867_Wmissing-field-initializers/: 0.html  output_5c38ca212867cc80d2e2200df756af064fa827a2
2022-03-14-092016-13424-1@2e91cb4450b9_Wsign-compare/: commitmsg  index.html  output_2e91cb4450b9e9fb6e59aa2bda2d6fde4aeaeb1a  report-336474.html
2022-03-14-092022-8426-cppcheck@2e91cb4450b9_Wsign-compare/: 0.html  2.html  3.html
2022-03-14-094304-13426-1@4ed1cef4b984_Wmissing-prototypes/: index.html  report-2c5baa.html
2022-03-14-094310-6338-cppcheck@4ed1cef4b984_Wmissing-prototypes/: 0.html  2.html  commitmsg  index.html  output_4ed1cef4b9841787f62e3b2baf48ba93c1c7edb5
2022-03-14-100108-13424-1@ab7632223e14_Wmissing-prototypes/: index.html  output_ab7632223e14f8ed516ba0776d8fda36da12cbc4  report-055d26.html
2022-03-14-100116-1413-cppcheck@ab7632223e14_Wmissing-prototypes/: 1.html  3.html
2022-03-14-101455-13423-1@cb22b69a4771_Wunused-macros/: index.html  report-bb92fd.html
2022-03-14-101502-1440-cppcheck@cb22b69a4771_Wunused-macros/: 1.html  commitmsg  index.html
build-aux/flatpak/: org.kop316.antispam.json
build-aux/w32/: README.md  defaults.sh.in  defines.wxi.in  make-w32-msi.sh  phosh-antispam.wxs
completion/: phosh-antispam
data/: meson.build  org.kop316.antispam-daemon.desktop.in.in  org.kop316.antispam.desktop.in.in  org.kop316.antispam.gschema.xml  org.kop316.antispam.service.in  org.kop316.phoshantispam.desktop.in.in
data/metainfo/: org.kop316.antispam.metainfo.xml.in
docs/help/: meson.build
docs/help/C/: index.page  show-about.page
docs/man/: meson.build  phosh-antispam.xml
docs/reference/: meson.build  phosh-antispam-docs.xml  phosh-antispam-sections.txt
po/: POTFILES.in  ar.po  meson.build
src/: aspam-application.c  aspam-application.h  aspam-client.c  aspam-client.h  aspam-log.c  aspam-log.h  aspam-pattern-row.c  aspam-pattern-row.h  aspam-settings.c  aspam-settings.h  aspam-utils.c  aspam-utils.h  aspam-window.c  aspam-window.h  main.c  meson.build  spamblock-client.c  spamblock-client.h  version.h.in
src/resources/: antispam.gresource.xml
src/resources/ui/: aspam-pattern-row.ui  aspam-window.ui
tests/: meson.build  settings.c  utils.c
